--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "watch": "tsc -w",
     "lint": "tslint --project ."
   },
-  "dependencies": {},
+  "dependencies": {
+    "is-browser": "^2.1.0"
+  },
   "devDependencies": {
     "@types/node": "^10.12.18",
     "ava": "^1.0.1",
