--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "author": "Martin Algesten",
   "private": true,
   "scripts": {
-    "test": "npm run lint && ava --verbose",
-    "test-watch": "ava --watch",
+    "test": "npm run lint && loltest",
     "build": "tsc && cp ./src/*.js ./build/ && browserify -r ./build/index.js:lolog ./build/index.js> ./lolog.js",
     "watch": "tsc -w",
     "lint": "tslint --project ."
@@ -20,20 +19,11 @@
   "devDependencies": {
     "@types/node": "^10.12.18",
     "@types/uuid": "^3.4.4",
-    "ava": "^1.0.1",
     "browserify": "^16.2.3",
+    "loltest": "github:lookback/loltest#1.1.1",
     "ts-node": "^7.0.1",
     "tslint": "^5",
     "tslint-immutable": "^4.7",
     "typescript": "^3.1.6"
-  },
-  "ava": {
-    "compileEnhancements": false,
-    "extensions": [
-      "ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ]
   }
 }
