--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "clean": "rm -rf build",
     "prepublishOnly": "npm run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lookback/lolog-js.git"
+  },
   "files": [
     "build"
   ],
