--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/lookback/lolog-js.git"
   },
+  "license": "UNLICENSED",
   "files": [
     "build"
   ],
