--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ root = true
 [*]
 insert_final_newline = true
 
-[*.{js,ts}]
+[*.{js,ts,tsx}]
 indent_size = 4
 indent_style = space
 trim_trailing_whitespace = true
