--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/uuid": "^3.4.6",
     "browserify": "^16.5.0",
     "loltest": "github:lookback/loltest#1.1.1",
+    "prettier": "=2.0.5",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.2"
   }
